--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#Education">Education</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#portofolio">Portofolio</a>
             </li>
             <li class="nav-item">
@@ -91,6 +94,87 @@
         designs according to user needs. I am always looking for new ways to
         improve my skills
       </p>
+      <a
+      href="#Education"
+      class="text-decoration-none arrow w-100 d-flex align-items-center flex-column mt-5">
+    </a>
+  </section>
+  <section id="Education" class="Education container">
+      <div class="about-exp">
+        <div class="about-exp-item">
+          <div class="about-exp-item-header">
+            <div>
+              <h5>IPB UNIVERSITY</h5>
+              <p>D4 SOFTWARE ENGINEERING TECHNOLOGY</p>
+              <p>2021 - PRESENT</p>
+              <p>GPA : 3.45/4.00</p>
+            </div>
+          </div>
+    </section>
+    <!-- <section id="work" class="work container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col-12 col-md-5">
+                <p>This is a project that I have created. I am interested in the process of creating user interfaces. I
+                    have the ability to build and develop responsive and user-friendly websites. I use programming
+                    languages such as HTML, CSS, JavaScript, and PHP to create dynamic web applications. I also have the
+                    ability to use frameworks such as Laravel and CodeIgniter to build a website. I enjoy working in a
+                    team and am always open to learning new technologies in the field of web programming.</p>
+            </div>
+            <div class="col-12 col-md-6 work-img">
+                <div id="work-1" class="work-img-item">
+                    <img src="images/tokoamanah.jpg" alt="work 1">
+
+                </div>
+                <div id="work-2" class="work-img-item">
+                    <img src="images/nuri.png" alt="work 2">
+                </div>
+                <div id="work-3" class="work-img-item">
+                    <img src="images/si.jpg" alt="work 3">
+                </div>
+            </div>
+        </div>
+    </section> -->
+
+    <section
+      id="portofolio"
+      class="portofolio container d-flex"
+      style="flex-direction: column; gap: 20px"
+    >
+      <div class="row d-flex align-items-center gap-5">
+        <div
+          class="col-12 col-md-6 work-img d-flex w-100 wrap-portofolio"
+          id="wrap-portofolio"
+          style="gap: 80px"
+        >
+          <div
+            id="work-1"
+            class="work-img-item w-100"
+            data-link="https://agriverse.pegelinux.my.id/"
+          >
+            <a href=""><img src="images/agriverse.png" alt="work 1" /></a>
+            <h3>Agriverse</h3>
+          </div>
+
+          <div
+            id="work-2"
+            class="work-img-item w-100"
+            data-link="https://drive.google.com/file/d/1y7u7uQB1Tnrv3VvSAZXYLkYhl_u_vZsA/view?usp=drive_link"
+          >
+            <a href=""
+              ><img src="images/E-Book.png" alt="work 2" height="178"
+            /></a>
+            <h3>E-Book For Karangrejo Village</h3>
+          </div>
+          <div
+            id="work-3"
+            class="work-img-item w-100"
+            data-link="-"
+          >
+            <a href=""><img src="images/FiAr.png" alt="work 3" /></a>
+            <h3>Fishery Area "FiAr"</h3>
+          </div>
+        </div>
+      </div>
       <div class="about-exp">
         <div class="about-exp-item">
           <div class="about-exp-item-header">
@@ -215,71 +299,6 @@
             </ul>
           </div>
         </div>
-    </section>
-    <!-- <section id="work" class="work container">
-        <div class="row d-flex align-items-center gap-5">
-            <div class="col-12 col-md-5">
-                <p>This is a project that I have created. I am interested in the process of creating user interfaces. I
-                    have the ability to build and develop responsive and user-friendly websites. I use programming
-                    languages such as HTML, CSS, JavaScript, and PHP to create dynamic web applications. I also have the
-                    ability to use frameworks such as Laravel and CodeIgniter to build a website. I enjoy working in a
-                    team and am always open to learning new technologies in the field of web programming.</p>
-            </div>
-            <div class="col-12 col-md-6 work-img">
-                <div id="work-1" class="work-img-item">
-                    <img src="images/tokoamanah.jpg" alt="work 1">
-
-                </div>
-                <div id="work-2" class="work-img-item">
-                    <img src="images/nuri.png" alt="work 2">
-                </div>
-                <div id="work-3" class="work-img-item">
-                    <img src="images/si.jpg" alt="work 3">
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-    <section
-      id="portofolio"
-      class="portofolio container d-flex"
-      style="flex-direction: column; gap: 20px"
-    >
-      <div class="row d-flex align-items-center gap-5">
-        <div
-          class="col-12 col-md-6 work-img d-flex w-100 wrap-portofolio"
-          id="wrap-portofolio"
-          style="gap: 80px"
-        >
-          <div
-            id="work-1"
-            class="work-img-item w-100"
-            data-link="https://agriverse.pegelinux.my.id/"
-          >
-            <a href=""><img src="images/agriverse.png" alt="work 1" /></a>
-            <h3>Agriverse</h3>
-          </div>
-
-          <div
-            id="work-2"
-            class="work-img-item w-100"
-            data-link="https://drive.google.com/file/d/1y7u7uQB1Tnrv3VvSAZXYLkYhl_u_vZsA/view?usp=drive_link"
-          >
-            <a href=""
-              ><img src="images/E-Book.png" alt="work 2" height="178"
-            /></a>
-            <h3>E-Book For Karangrejo Village</h3>
-          </div>
-          <div
-            id="work-3"
-            class="work-img-item w-100"
-            data-link="-"
-          >
-            <a href=""><img src="images/FiAr.png" alt="work 3" /></a>
-            <h3>Fishery Area "FiAr"</h3>
-          </div>
-        </div>
-      </div>
       <!-- <div class="row d-flex align-items-center gap-5">
             <div class="col-12 col-md-6 work-img d-flex w-100" style="gap:80px;">
                 <div id="work-1" class="work-img-item w-100">
