--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a class="nav-link" href="#Education">Education</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#portofolio">Portofolio</a>
+              <a class="nav-link" href="#Projects">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -113,14 +113,14 @@
     </section>
 
     <section
-      id="portofolio"
-      class="portofolio container d-flex"
+      id="Projects"
+      class="projects container d-flex"
       style="flex-direction: column; gap: 20px"
     >
       <div class="row d-flex align-items-center gap-5">
         <div
-          class="col-12 col-md-6 work-img d-flex w-100 wrap-portofolio"
-          id="wrap-portofolio"
+          class="col-12 col-md-6 work-img d-flex w-100 wrap-projects"
+          id="wrap-projects"
           style="gap: 80px"
         >
           <div
